Adding update recipe function